# ld48-deeper-and-deeper

./: CMakeLists.txt  README.md
.github/workflows/: main.yml
ghactiontest/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  Sandbox.qml  main.cpp
src/qml/: AssetProvider.qml  EndingScreen.qml  GameApp.qml  GameScene.qml  InfoScreen.qml  MenuScreen.qml  SharedState.qml  TitleScreen.qml  main.qml  qml.qrc
src/qml/details/: Activity.qml  AnimatedEntity.qml  Asteroid.qml  Enemy.qml  EnergyBar.qml  Finish.qml  Floor.qml  GameButton.qml  GameSound.qml  H2oBar.qml  Harvesting.qml  HealthBar.qml  IconBar.qml  LivingEntity.qml  Moving.qml  Planet.qml  Player.qml  ResourceHolder.qml  SpriteBoxBody.qml  StaticEntity.qml  SupplyingWithH2o.qml  Wall.qml
src/sound/: sound.qrc
